--- a/model.ipynb
+++ b/model.ipynb
@@ -26,22 +26,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "id": "8a525a45",
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "str expected, not NoneType",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[12], line 5\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mdotenv\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m load_dotenv\n\u001b[0;32m      3\u001b[0m load_dotenv()\n\u001b[1;32m----> 5\u001b[0m \u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43menviron\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mOPENAI_API_KEY\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mgetenv(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mOPEN_API_KEY\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m      7\u001b[0m \u001b[38;5;66;03m# initialize the clip model for unified embeddings\u001b[39;00m\n\u001b[0;32m      8\u001b[0m clip_model \u001b[38;5;241m=\u001b[39m CLIPModel\u001b[38;5;241m.\u001b[39mfrom_pretrained(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mopenai/clip-vit-base-patch32\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "File \u001b[1;32m<frozen os>:719\u001b[0m, in \u001b[0;36m__setitem__\u001b[1;34m(self, key, value)\u001b[0m\n",
-      "File \u001b[1;32m<frozen os>:779\u001b[0m, in \u001b[0;36mcheck_str\u001b[1;34m(value)\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: str expected, not NoneType"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Xet Storage is enabled for this repo, but the 'hf_xet' package is not installed. Falling back to regular HTTP download. For better performance, install the package with: `pip install huggingface_hub[hf_xet]` or `pip install hf_xet`\n",
+      "Using a slow image processor as `use_fast` is unset and a slow processor was saved with this model. `use_fast=True` will be the default behavior in v4.52, even if the model was saved with a slow processor. This will result in minor differences in outputs. You'll still be able to use a slow processor with `use_fast=False`.\n",
+      "Using a slow image processor as `use_fast` is unset and a slow processor was saved with this model. `use_fast=True` will be the default behavior in v4.52, even if the model was saved with a slow processor. This will result in minor differences in outputs. You'll still be able to use a slow processor with `use_fast=False`.\n",
+      "Xet Storage is enabled for this repo, but the 'hf_xet' package is not installed. Falling back to regular HTTP download. For better performance, install the package with: `pip install huggingface_hub[hf_xet]` or `pip install hf_xet`\n",
+      "Xet Storage is enabled for this repo, but the 'hf_xet' package is not installed. Falling back to regular HTTP download. For better performance, install the package with: `pip install huggingface_hub[hf_xet]` or `pip install hf_xet`\n",
+      "Fetching 1 files: 100%|██████████| 1/1 [00:00<00:00,  2.01it/s]\n",
+      "\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "CLIPModel(\n",
+       "  (text_model): CLIPTextTransformer(\n",
+       "    (embeddings): CLIPTextEmbeddings(\n",
+       "      (token_embedding): Embedding(49408, 512)\n",
+       "      (position_embedding): Embedding(77, 512)\n",
+       "    )\n",
+       "    (encoder): CLIPEncoder(\n",
+       "      (layers): ModuleList(\n",
+       "        (0-11): 12 x CLIPEncoderLayer(\n",
+       "          (self_attn): CLIPAttention(\n",
+       "            (k_proj): Linear(in_features=512, out_features=512, bias=True)\n",
+       "            (v_proj): Linear(in_features=512, out_features=512, bias=True)\n",
+       "            (q_proj): Linear(in_features=512, out_features=512, bias=True)\n",
+       "            (out_proj): Linear(in_features=512, out_features=512, bias=True)\n",
+       "          )\n",
+       "          (layer_norm1): LayerNorm((512,), eps=1e-05, elementwise_affine=True)\n",
+       "          (mlp): CLIPMLP(\n",
+       "            (activation_fn): QuickGELUActivation()\n",
+       "            (fc1): Linear(in_features=512, out_features=2048, bias=True)\n",
+       "            (fc2): Linear(in_features=2048, out_features=512, bias=True)\n",
+       "          )\n",
+       "          (layer_norm2): LayerNorm((512,), eps=1e-05, elementwise_affine=True)\n",
+       "        )\n",
+       "      )\n",
+       "    )\n",
+       "    (final_layer_norm): LayerNorm((512,), eps=1e-05, elementwise_affine=True)\n",
+       "  )\n",
+       "  (vision_model): CLIPVisionTransformer(\n",
+       "    (embeddings): CLIPVisionEmbeddings(\n",
+       "      (patch_embedding): Conv2d(3, 768, kernel_size=(32, 32), stride=(32, 32), bias=False)\n",
+       "      (position_embedding): Embedding(50, 768)\n",
+       "    )\n",
+       "    (pre_layrnorm): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
+       "    (encoder): CLIPEncoder(\n",
+       "      (layers): ModuleList(\n",
+       "        (0-11): 12 x CLIPEncoderLayer(\n",
+       "          (self_attn): CLIPAttention(\n",
+       "            (k_proj): Linear(in_features=768, out_features=768, bias=True)\n",
+       "            (v_proj): Linear(in_features=768, out_features=768, bias=True)\n",
+       "            (q_proj): Linear(in_features=768, out_features=768, bias=True)\n",
+       "            (out_proj): Linear(in_features=768, out_features=768, bias=True)\n",
+       "          )\n",
+       "          (layer_norm1): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
+       "          (mlp): CLIPMLP(\n",
+       "            (activation_fn): QuickGELUActivation()\n",
+       "            (fc1): Linear(in_features=768, out_features=3072, bias=True)\n",
+       "            (fc2): Linear(in_features=3072, out_features=768, bias=True)\n",
+       "          )\n",
+       "          (layer_norm2): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
+       "        )\n",
+       "      )\n",
+       "    )\n",
+       "    (post_layernorm): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
+       "  )\n",
+       "  (visual_projection): Linear(in_features=768, out_features=512, bias=False)\n",
+       "  (text_projection): Linear(in_features=512, out_features=512, bias=False)\n",
+       ")"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
