--- a/model.ipynb
+++ b/model.ipynb
@@ -129,7 +129,29 @@
    "id": "cfd32ec1",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "##Embedding function\n",
+    "def embed_image(image_data):\n",
+    "    if isinstance(image_data, str):\n",
+    "        image = Image.open(image_data).convert(\"RGB\")\n",
+    "    else:\n",
+    "        iamge = image_data\n",
+    "\n",
+    "    inputs = clip_processor(images=image,return_tensors=\"pt\")\n",
+    "    with torch.no_grad():\n",
+    "        features = clip_model.get_image_features(**inputs)\n",
+    "        #Normalixe mebeddings to unit vector\n",
+    "        features = features / features.norm(dim=-1, keepdim=True)\n",
+    "        return features.squeeze().numpy()\n",
+    "\n",
+    "def embed_text(text):\n",
+    "    inputs = clip_processor(text=[text], return_tensors=\"pt\", padding=True,truncation=True,max_length=77)\n",
+    "    with torch.no_grad():\n",
+    "        features = clip_model.get_text_features(**inputs)\n",
+    "        # Normalize embeddings to unit vector\n",
+    "        features = features / features.norm(dim=-1, keepdim=True)\n",
+    "        return features.squeeze().numpy()  "
+   ]
   }
  ],
  "metadata": {
@@ -148,7 +170,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
