--- a/model.ipynb
+++ b/model.ipynb
@@ -164,13 +164,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "5950288e",
    "metadata": {},
    "outputs": [],
    "source": [
     "pdf_path = \"multimodal_sample.pdf\"\n",
-    "doc=fitz.open(pdf_path)"
+    "doc=fitz.open(pdf_path)\n",
+    "\n",
+    "all_docs = []\n",
+    "all_embeddings = []\n",
+    "image_data_store = {}\n",
+    "\n",
+    "#Text splitter\n",
+    "splitter = RecursiveCharacterTExtSplitter(chunk_size=500, chunk_overlap=100)"
    ]
   },
   {
