--- a/model.ipynb
+++ b/model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "2bdd70de",
    "metadata": {},
    "outputs": [
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "5950288e",
    "metadata": {},
    "outputs": [],
@@ -177,7 +177,7 @@
     "image_data_store = {}\n",
     "\n",
     "#Text splitter\n",
-    "splitter = RecursiveCharacterTExtSplitter(chunk_size=500, chunk_overlap=100)"
+    "splitter = RecursiveCharacterTextSplitter(chunk_size=500, chunk_overlap=100)\n"
    ]
   },
   {
@@ -186,7 +186,21 @@
    "id": "8ff7ce1f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "for i,page in enumerate(doc):\n",
+    "    text = page.get_text()\n",
+    "    if text.trip():\n",
+    "        #create the temporary document for splitting\n",
+    "        temp__doc = Document(page_content= text,metadata={\"page\":i,\"type\":\"text\"})\n",
+    "        text_chunks = splitter.split_documents([temp_doc])\n",
+    "\n",
+    "        #Embed each chunk using CLIP\n",
+    "        for chunk in text_chunks:\n",
+    "            embedding = embed_text(chunk.page_content)\n",
+    "            all_embeddings.append(embedding)\n",
+    "            all_docs.append(chunk)\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
