--- a/model.ipynb
+++ b/model.ipynb
@@ -185,7 +185,17 @@
    "execution_count": null,
    "id": "8ff7ce1f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "KeyboardInterrupt\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "for i,page in enumerate(doc):\n",
     "    text = page.get_text()\n",
@@ -196,16 +206,74 @@
     "\n",
     "        #Embed each chunk using CLIP\n",
     "        for chunk in text_chunks:\n",
-    "            embedding = embed_text(chunk.page_content)\n",
+    "            embedding = embed_text(chunk.page_content) #text features\n",
     "            all_embeddings.append(embedding)\n",
     "            all_docs.append(chunk)\n",
-    "\n"
+    "\n",
+    "        \n",
+    "\n",
+    "        for img_index, img in enumerate(page.get_images(full=True)):\n",
+    "            try:\n",
+    "                xref = img[0]\n",
+    "                base_image = doc.extract_image(xref)\n",
+    "                image_bytes = base_image[\"image\"]\n",
+    "\n",
+    "                #convert to PIL image\n",
+    "                pil_image = Image.open(io.BytesIO(image_bytes)).convert(\"RGB\")\n",
+    "\n",
+    "                image_id = f\"page_{i}_img_{img_index}\"\n",
+    "\n",
+    "                buffered = io.BytesIO()\n",
+    "                pil_image.save(buffered, format=\"PNG\")\n",
+    "                img_based64 = base64.b64encode(buffered.getvalue()).decode()\n",
+    "                image_data_store[image_id] = img_based64\n",
+    "\n",
+    "                #embed image using CLIP\n",
+    "                embedding = embed_image(pil_image)\n",
+    "                all_embeddings.append(embedding)\n",
+    "\n",
+    "                #ceate document for image\n",
+    "                image_doc = Document(\n",
+    "                    page_content=f\"[Image: {image_id}]\",\n",
+    "                    metadata={\"page\":i,\"type\":\"image\",\"image_id\":image_id}\n",
+    "                )\n",
+    "                all_docs.append(image_doc)\n",
+    "\n",
+    "            except Exception as e:\n",
+    "                print(f\"Error processing image {i}: {e}\")\n",
+    "                continue\n",
+    "\n",
+    "doc.close()\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "1066ea4d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f05f148e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bef3231c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "16ff1eb8",
    "metadata": {},
    "outputs": [],
    "source": []
