--- a/model.ipynb
+++ b/model.ipynb
@@ -134,27 +134,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "cfd32ec1",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Fix Cell #3 - Embedding functions\n",
     "##Embedding function\n",
     "def embed_image(image_data):\n",
     "    if isinstance(image_data, str):\n",
     "        image = Image.open(image_data).convert(\"RGB\")\n",
     "    else:\n",
-    "        iamge = image_data\n",
+    "        image = image_data  # Fixed: was \"iamge\"\n",
     "\n",
-    "    inputs = clip_processor(images=image,return_tensors=\"pt\")\n",
+    "    inputs = clip_processor(images=image, return_tensors=\"pt\")\n",
     "    with torch.no_grad():\n",
     "        features = clip_model.get_image_features(**inputs)\n",
-    "        #Normalixe mebeddings to unit vector\n",
+    "        # Normalize embeddings to unit vector (Fixed spelling)\n",
     "        features = features / features.norm(dim=-1, keepdim=True)\n",
     "        return features.squeeze().numpy()\n",
     "\n",
     "def embed_text(text):\n",
-    "    inputs = clip_processor(text=[text], return_tensors=\"pt\", padding=True,truncation=True,max_length=77)\n",
+    "    inputs = clip_processor(text=[text], return_tensors=\"pt\", padding=True, truncation=True, max_length=77)\n",
     "    with torch.no_grad():\n",
     "        features = clip_model.get_text_features(**inputs)\n",
     "        # Normalize embeddings to unit vector\n",
@@ -197,86 +198,54 @@
     }
    ],
    "source": [
-    "for i,page in enumerate(doc):\n",
+    "# Fix Cell #5 - PDF processing loop\n",
+    "for i, page in enumerate(doc):\n",
     "    text = page.get_text()\n",
-    "    if text.trip():\n",
-    "        #create the temporary document for splitting\n",
-    "        temp__doc = Document(page_content= text,metadata={\"page\":i,\"type\":\"text\"})\n",
+    "    if text.strip():  # Fixed: was \"text.trip()\"\n",
+    "        # Create the temporary document for splitting\n",
+    "        temp_doc = Document(page_content=text, metadata={\"page\": i, \"type\": \"text\"})  # Fixed: was \"temp__doc\"\n",
     "        text_chunks = splitter.split_documents([temp_doc])\n",
     "\n",
-    "        #Embed each chunk using CLIP\n",
+    "        # Embed each chunk using CLIP\n",
     "        for chunk in text_chunks:\n",
-    "            embedding = embed_text(chunk.page_content) #text features\n",
+    "            embedding = embed_text(chunk.page_content)\n",
     "            all_embeddings.append(embedding)\n",
     "            all_docs.append(chunk)\n",
     "\n",
-    "        \n",
+    "    # Process images on the page\n",
+    "    for img_index, img in enumerate(page.get_images(full=True)):\n",
+    "        try:\n",
+    "            xref = img[0]\n",
+    "            base_image = doc.extract_image(xref)\n",
+    "            image_bytes = base_image[\"image\"]\n",
     "\n",
-    "        for img_index, img in enumerate(page.get_images(full=True)):\n",
-    "            try:\n",
-    "                xref = img[0]\n",
-    "                base_image = doc.extract_image(xref)\n",
-    "                image_bytes = base_image[\"image\"]\n",
+    "            # Convert to PIL image\n",
+    "            pil_image = Image.open(io.BytesIO(image_bytes)).convert(\"RGB\")\n",
     "\n",
-    "                #convert to PIL image\n",
-    "                pil_image = Image.open(io.BytesIO(image_bytes)).convert(\"RGB\")\n",
+    "            image_id = f\"page_{i}_img_{img_index}\"\n",
     "\n",
-    "                image_id = f\"page_{i}_img_{img_index}\"\n",
+    "            buffered = io.BytesIO()\n",
+    "            pil_image.save(buffered, format=\"PNG\")\n",
+    "            img_base64 = base64.b64encode(buffered.getvalue()).decode()  # Fixed: was \"img_based64\"\n",
+    "            image_data_store[image_id] = img_base64\n",
     "\n",
-    "                buffered = io.BytesIO()\n",
-    "                pil_image.save(buffered, format=\"PNG\")\n",
-    "                img_based64 = base64.b64encode(buffered.getvalue()).decode()\n",
-    "                image_data_store[image_id] = img_based64\n",
+    "            # Embed image using CLIP\n",
+    "            embedding = embed_image(pil_image)\n",
+    "            all_embeddings.append(embedding)\n",
     "\n",
-    "                #embed image using CLIP\n",
-    "                embedding = embed_image(pil_image)\n",
-    "                all_embeddings.append(embedding)\n",
+    "            # Create document for image (Fixed spelling: was \"ceate\")\n",
+    "            image_doc = Document(\n",
+    "                page_content=f\"[Image: {image_id}]\",\n",
+    "                metadata={\"page\": i, \"type\": \"image\", \"image_id\": image_id}\n",
+    "            )\n",
+    "            all_docs.append(image_doc)\n",
     "\n",
-    "                #ceate document for image\n",
-    "                image_doc = Document(\n",
-    "                    page_content=f\"[Image: {image_id}]\",\n",
-    "                    metadata={\"page\":i,\"type\":\"image\",\"image_id\":image_id}\n",
-    "                )\n",
-    "                all_docs.append(image_doc)\n",
+    "        except Exception as e:\n",
+    "            print(f\"Error processing image on page {i}: {e}\")\n",
+    "            continue\n",
     "\n",
-    "            except Exception as e:\n",
-    "                print(f\"Error processing image {i}: {e}\")\n",
-    "                continue\n",
-    "\n",
-    "doc.close()\n"
+    "doc.close()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1066ea4d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f05f148e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bef3231c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "16ff1eb8",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
